created POST endpoint for Customer and minor lombok annotations refactoring