@@ -1,19 +1,19 @@
 package io.GuiWEspinola.poc1.controller;
 
 import io.GuiWEspinola.poc1.entities.Customer;
+import io.GuiWEspinola.poc1.entities.dto.request.CustomerRequestDTO;
 import io.GuiWEspinola.poc1.entities.dto.response.CustomerResponseDTO;
 import io.GuiWEspinola.poc1.service.impl.CustomerServiceImpl;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static org.springframework.http.HttpStatus.CREATED;
 
 @RestController
 @AllArgsConstructor
@@ -31,12 +31,17 @@ public class CustomerController {
         List<Customer> responseDTOList = customerService.findAll();
         return ResponseEntity.ok().body(responseDTOList
                 .stream()
-                .map(customer -> mapper.map(customer, CustomerResponseDTO.class))
-                .collect(Collectors.toList()));
+                .map(customer -> mapper.map(customer, CustomerResponseDTO.class)).toList());
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<CustomerResponseDTO> getCustomerById(@PathVariable Long id) {
         return ResponseEntity.ok().body(mapper.map(customerService.findById(id), CustomerResponseDTO.class));
+    }
+
+    @PostMapping
+    public ResponseEntity<CustomerResponseDTO> postCustomer(@RequestBody CustomerRequestDTO customerRequestDTO) {
+        return ResponseEntity.status(CREATED)
+                .body(mapper.map(customerService.save(customerRequestDTO), CustomerResponseDTO.class));
     }
 }
